--- a/register.html
+++ b/register.html
@@ -70,9 +70,12 @@
                                                 up</button>
                                         </div>
                                         <div class="col-lg-12">
-                                            <div class="d-flex justify-content-end align-items-center mt-4 justify-content-md-center justify-content-center">
-                                                <p class="text-secondary fs-6 align-items-center p-0 m-0">Already a Member?</p>
-                                                <a class="text-success pe-lg-15 ps-2 pe-md-0" href="signin.html" target="_parent">Sign in here</a>
+                                            <div
+                                                class="d-flex justify-content-end align-items-center mt-4 justify-content-md-center justify-content-center">
+                                                <p class="text-secondary fs-6 align-items-center p-0 m-0">Already a
+                                                    Member?</p>
+                                                <a class="text-success pe-lg-15 ps-2 pe-md-0" href="signin.html"
+                                                    target="_parent">Sign in here</a>
                                             </div>
                                         </div>
                                     </form>
