--- a/signin.html
+++ b/signin.html
@@ -30,7 +30,7 @@
                                     <!-- email  -->
                                     <div class="col-lg-10">
                                         <div class="row justify-content-center mb-4">
-                                            <input type="text" id="" placeholder="Email" required
+                                            <input type="email" id="" placeholder="Email" required
                                                 class="form-control border-0 rounded-pill bg-success-subtle pb-2 text-success">
                                         </div>
                                     </div>
@@ -43,7 +43,7 @@
                                     </div>
                                     <div class="col-lg-7 m-auto">
                                         <div class="row justify-content-center mb-3 ">
-                                            <button class="btn btn-success w-75 rounded-pill">Let's Go</button>
+                                            <button class="btn btn-success w-75 rounded-pill" type="submit">Let's Go</button>
                                         </div>
                                     </div>
                                     <div class="col-lg-8 m-auto">
