--- a/index.html
+++ b/index.html
@@ -76,37 +76,30 @@
                     >ទំព័រដើម</a
                   >
                 </li>
-                <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="#">អត្ថបទ</a>
-                </li>
-                <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="#">បរិចាក</a>
-                </li>
-                <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="#">វត្ថុកែច្នៃ</a>
-                </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown fs-5">
                   <a
-                    class="nav-link dropdown-toggle"
+                    class="nav-link nav-hover no-caret dropdown-toggle"
                     href="#"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Dropdown
+                    អត្ថបទ
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
                     <li>
-                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">ឯកសារ</a>
                     </li>
                     <li>
-                      <hr class="dropdown-divider" />
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
+                      <a class="dropdown-item" href="#">វីដេអូ</a>
                     </li>
                   </ul>
+                </li>
+                <li class="nav-item fs-5">
+                  <a class="nav-link nav-hover" href="#">សកម្មភាពសង្គម</a>
+                </li>
+                <li class="nav-item fs-5">
+                  <a class="nav-link nav-hover" href="#">ផលិតផលកែច្នៃ</a>
                 </li>
               </ul>
             </div>
