--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="assets/chhorng/javascript.js">
 </head>
 
-<body>
-
+<body class="forgetpwd-page">
     <main>
         <section class="forgetpwd-area">
             <div class="container">
@@ -56,7 +55,6 @@
             </div>
         </section>
     </main>
-
 </body>
 <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
