--- a/newpassword.html
+++ b/newpassword.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/chhorng/javascript.js">
 </head>
 
-<body>
+<body class="newpwd-page">
 
     <main>
         <section class="newpassword-area">
