--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/chhorng/javascript.js">
 </head>
 
-<body>
+<body class="register-page">
     <main>
         <section class="login-area">
             <div class="container">
