--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 </head>
 
-<body>
+<body class="signin-page">
     <main>
         <section class="signin-area">
             <div class="container">
