--- a/about.html
+++ b/about.html
@@ -13,98 +13,166 @@
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
     <!-- js  -->
     <link rel="stylesheet" href="assets/chhorng/javascript.js">
+    <!-- fontawesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 
-<body>
+<body class="about-page">
 
     <header>
         <div class="container"></div>
     </header>
     <main>
-        <section>
+        <section class="about-area">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="card mb-4">
-                            <div class="card-header">
-                                Banner
-                            </div>
                             <div class="card-body">
-                                <h5 class="card-title">...</h5>
-                                <p class="card-text">...</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                                ...
+                                <img src="assets/chhorng/img/group-5.jpg" class="card-img object-fit-cover"
+                                    style="height: 400px;" alt="">
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
-                        <div class="card">
-                            <div class="card-header">
-                                ...
+                    <!-- 3 col  -->
+                    <div class="row justify-content-center mb-4">
+
+                        <!-- nazaby  -->
+                        <div class="col-lg-3">
+                            <div class="card card-member">
+                                <img src="assets/chhorng/img/Nazaby.JPG" class="card-img" style="height: 100%;" alt="">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        <h4 class="fs-5">Nazaby</h4>
+                                        <p class="text-light text-center">Ma vek pjob.</p>
+                                    </div>
+                                    <div class="btn-group">
+                                        <ul class="navbar-nav" type="none">
+                                            <li><a class="nav-link" href="https://web.facebook.com/nazaby.zin/"><img
+                                                        src="assets/chhorng/img/fb.webp" class="img-icon" alt=""></a>
+                                            </li>
+                                            <li><a class="nav-link" href="https://t.me/zaby21"><img
+                                                        src="assets/chhorng/img/telegram-black.png" class="img-icon"
+                                                        alt=""></a></li>
+                                            <li><a class="nav-link"
+                                                    href="https://www.linkedin.com/in/measrithy-nazaby-005948314/"><img
+                                                        src="assets/chhorng/img/linkin.png" class="img-icon" alt=""></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card-body">
-                                <h5 class="card-title">...</h5>
-                                <p class="card-text">...</p>
+                        </div>
+
+                        <!-- Senkropum  -->
+                        <div class="col-lg-3">
+                            <div class="card card-member">
+                                <img src="assets/chhorng/img/pfp icon.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        <h4 class="fs-5">Senkropum</h4>
+                                        <p class="text-light text-center">Bro copy paste hx ot trv tt orn jmr</p>
+                                    </div>
+                                    <div class="btn-group">
+                                        <ul class="navbar-nav" type="none">
+                                            <li><a class="nav-link"
+                                                    href="https://www.facebook.com/profile.php?id=61576696425543"><img
+                                                        src="assets/chhorng/img/fb.webp" class="img-icon" alt=""></a>
+                                            </li>
+                                            <li><a class="nav-link" href="https://t.me/DDDemmii"><img
+                                                        src="assets/chhorng/img/telegram-black.png" class="img-icon"
+                                                        alt=""></a></li>
+                                            <li><a class="nav-link"
+                                                    href="https://www.linkedin.com/in/nhoem-senkropum-b0081a261"><img
+                                                        src="assets/chhorng/img/linkin.png" class="img-icon" alt=""></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card-footer text-muted">
-                                ...
+                        </div>
+
+                        <!-- Me  -->
+                        <div class="col-lg-3">
+                            <div class="card card-member">
+                                <img src="assets/chhorng/img/pfp icon.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        <h4 class="fs-5">Kimchhorng</h4>
+                                        <p class="text-light text-center">Late Game.</p>
+                                    </div>
+                                    <div class="btn-group">
+                                        <ul class="navbar-nav" type="none">
+                                            <li><a class="nav-link"
+                                                    href="https://www.facebook.com/share/16s8Skgwjb/?mibextid=wwXIfr"><img
+                                                        src="assets/chhorng/img/fb.webp" class="img-icon" alt=""></a>
+                                            </li>
+                                            <li><a class="nav-link" href="https://t.me/destroholy"><img
+                                                        src="assets/chhorng/img/telegram-black.png" class="img-icon"
+                                                        alt=""></a></li>
+                                            <li><a class="nav-link"
+                                                    href="https://www.linkedin.com/in/kim-chhorng-mao-461040370/?trk=public-profile-join-page"><img
+                                                        src="assets/chhorng/img/linkin.png" class="img-icon" alt=""></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                ...
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">...</h5>
-                                <p class="card-text">...</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                                ...
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                ...
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">...</h5>
-                                <p class="card-text">...</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                                ...
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                ...
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">...</h5>
-                                <p class="card-text">...</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                                ...
+                    <!-- 2 col  -->
+                    <div class="row justify-content-center">
+
+                        <!-- Minea  -->
+                        <div class="col-lg-3">
+                            <div class="card card-member">
+                                <img src="assets/chhorng/img/pfp icon.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        <h4 class="fs-5">Meng Minea</h4>
+                                        <p class="text-light text-center">Bro copy paste hx ot dar tt orn jmr</p>
+                                    </div>
+                                    <div class="btn-group">
+                                        <ul class="navbar-nav" type="none">
+                                            <li><a class="nav-link"
+                                                    href="https://www.facebook.com/share/19kmz5vuSL/"><img
+                                                        src="assets/chhorng/img/fb.webp" class="img-icon" alt=""></a>
+                                            </li>
+                                            <li><a class="nav-link" href="https://t.me/JOHNNEA12"><img
+                                                        src="assets/chhorng/img/telegram-black.png" class="img-icon"
+                                                        alt=""></a></li>
+                                            <li><a class="nav-link"
+                                                    href="https://www.linkedin.com/in/meng-minea-60b2ab375/"><img
+                                                        src="assets/chhorng/img/linkin.png" class="img-icon" alt=""></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                ...
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">...</h5>
-                                <p class="card-text">...</p>
-                            </div>
-                            <div class="card-footer text-muted">
-                                ...
+                        <!-- Makara  -->
+                        <div class="col-lg-3">
+                            <div class="card card-member">
+                                <img src="assets/chhorng/img/pfp icon.jpg" class="card-img-top" alt="">
+                                <div class="card-body">
+                                    <div class="card-title">
+                                        <h4 class="fs-5">Makara</h4>
+                                        <p class="text-light text-center">A jerng vai game.</p>
+                                    </div>
+                                    <div class="btn-group">
+                                        <ul class="navbar-nav" type="none">
+                                            <li><a class="nav-link"
+                                                    href="https://www.facebook.com/share/1ChhS81hnP/?mibextid=wwXIfr"><img
+                                                        src="assets/chhorng/img/fb.webp" class="img-icon" alt=""></a>
+                                            </li>
+                                            <li><a class="nav-link" href="https://t.me/chummakara168"><img
+                                                        src="assets/chhorng/img/telegram-black.png" class="img-icon"
+                                                        alt=""></a></li>
+                                            <li><a class="nav-link" href="#"><img src="assets/chhorng/img/linkin.png"
+                                                        class="img-icon" alt=""></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
