--- a/pin.html
+++ b/pin.html
@@ -28,9 +28,9 @@
     } */
 </style>
 
-<body>
+<body class="pin-page">
     <main>
-        <section class="pin-area">
+        <section>
             <div class="container">
                 <div class="row align-items-center justify-content-center" style="height: 100vh;">
                     <div class="col-lg-10">
