--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -38,12 +38,17 @@
                                             <div class="mb-4">
                                                 <label for="" class="form-label text-dark">Your Email</label>
                                                 <input type="text" id="" placeholder="Email" required
-                                                    class="form-control border-0 rounded-pill bg-primary-subtle pb-2 text-success">
+                                                    class="form-control border-0 rounded-pill bg-success-subtle pb-2 text-success">
                                             </div>
                                         </div>
                                         <div class="col-lg-6 m-auto">
                                             <div class="row justify-content-center mb-3">
                                                 <a href="pin.html" class="btn btn-success rounded-pill">Send</a>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6 m-auto">
+                                            <div class="row justify-content-center mb-3">
+                                                <a href="#" class="text-success text-end" style="font-size: 15px;">Try another way</a>
                                             </div>
                                         </div>
                                     </form>
