--- a/event.html
+++ b/event.html
@@ -35,6 +35,10 @@
 </section>
 <section class="my-5">
   <div class="container">
+  </div>
+</section>
+<section>
+   <div class="container">
     <h1 class="text-center fw-bold">សកម្មភាពបៃតង</h1>
     <p class="text-center">សកម្មភាពបៃតងគឺជាសកម្មភាពដែលមានគោលបំណងក្នុងការពារបរិស្ថាន និងកាត់បន្ថយបញ្ហាបរិស្ថាន។</p>
     <div class="row gy-4">
@@ -67,7 +71,7 @@
           <div class="card-body">
             <h5 class="card-title fw-bold"><a href="event3.html" class="text-decoration-none text-success text-color">Plastic Waste</a></h5>
             <p class="card-text">សកម្មភាពនេះផ្តោតលើការកាត់បន្ថយសំណល់ប្លាស្ទិក និងលើកកម្ពស់ការប្រើ...</p>
-            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
+            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ២២​ ធ្នូរ​ ២០២៥</p>
           </div>
         </div>
       </div>
@@ -78,7 +82,7 @@
           <div class="card-body">
             <h5 class="card-title fw-bold"><a href="event4.html" class="text-decoration-none text-success text-color">ECO Leadership Discovery</a></h5>
             <p class="card-text">សកម្មភាពនេះផ្តោតលើការអភិវឌ្ឍជំនាញភាពជាអ្នកដឹកនាំបៃតង និងការបង្កើតឱកាស...</p>
-            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ១៩​ ធ្នូរ​ ២០២៥</p>
+            <p class="card-text text-muted"><i class="fa-solid fa-calendar-days text-success"></i> ២៥​ ធ្នូរ​ ២០២៥</p>
           </div>
         </div>
       </div>
@@ -129,6 +133,20 @@
         </div>
       </div>
     </div>
+
+
+    <!-- Pagination -->
+    <nav aria-label="Course pagination" class="mt-5">
+      <ul class="pagination justify-content-center">
+        <li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
+        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">4</a></li>
+        <li class="page-item"><a class="page-link" href="#">5</a></li>
+        <li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
+      </ul>
+    </nav>
   </div>
 </section>
   <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
