update file e-commerce

--- a/cart.html
+++ b/cart.html
@@ -87,7 +87,7 @@
             </table>
           </div>
           <div class="text-end mt-3">
-            <button class="btn btn-success fs-kp">ការបញ្ជាទិញ</button>
+            <a href="buy.html" class="btn btn-success fs-kp">ការបញ្ជាទិញ</a>
           </div>
         </div>
       </div>
@@ -115,13 +115,17 @@
           <div class="modal-body">
             <form>
               <div class="row gy-4">
-                <div class="col-6">
-                  <label class="form-label fw-bold  ">ឈ្មោះផលិតផល</label>
-                  <p id="modal-product-name"></p>
+                <div class="col-sm-12 col-md-6">
+                  <div class="card border-0 text-center">
+                    <label class="form-label fw-bold">ឈ្មោះផលិតផល</label>
+                    <p id="modal-product-name"></p>
+                  </div>
                 </div>
-                <div class="col-6">
-                  <label class="form-label fw-bold">ចំនួនផលិតផល</label>
-                  <input type="number" class="form-control text-center" id="modal-product-quantity" min="1" max="20">
+                <div class="col-sm-12 col-md-6 text-center">
+                  <div class="card text-center border-0">
+                    <label class="form-label fw-bold">ចំនួនផលិតផល</label>
+                    <input type="number" class="form-control text-center" id="modal-product-quantity" min="1" max="20">
+                  </div>
                 </div>
               </div>
             </form>
