--- a/e-commerce.html
+++ b/e-commerce.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-
 <body>
 
   <main>
@@ -20,12 +19,14 @@
         <div class="row align-items-center">
           <!-- Left Title -->
           <div class="col-md-6">
-            <h1 class="fw-bold mb-4 fs-kp">អត្ថប្រយោជន៍នៃការលក់ផលិតផលកែឆ្នៃ</h1>
+            <h1 class="fw-bold mb-4 fs-kp typing-loop">អត្ថប្រយោជន៍នៃការលក់<span
+                class="text-success">ផលិតផលកែឆ្នៃ</span>
+            </h1>
             <ul class="list-unstyled fs-5 fs-kp">
               <li>កាត់បន្ថយកាកសំណល់ និងការបំពុលបរិស្ថាន</li>
               <li>បង្កើតប្រាក់ចំណេញ និងការងារថ្មី</li>
               <li>ផ្តល់អត្ថប្រយោជន៍សម្រាប់សង្គម និងសេដ្ឋកិច្ច</li>
-              <li>ជួយឲ្យប្រទេសមានស្តង់ដារ Green Economy</li>
+              <li>ជួយឲ្យប្រទេសមានស្តង់ដារ <span class="text-success">Green Economy</span></li>
             </ul>
           </div>
           <!-- Right Image -->
@@ -40,12 +41,13 @@
     <!-- type Plastic -->
     <section style="margin-top: 80px;">
       <div class="container">
-        <h3 class="fw-bold fs-kp text-center display-5" style="margin-bottom: 100px;" data-aos="fade-left">ផលិតផលប្លាស្ទិចកែឆ្នៃ</h3>
+        <h3 class="fw-bold fs-kp text-center display-5" style="margin-bottom: 100px;" data-aos="fade-left">
+          ផលិតផលប្លាស្ទិចកែឆ្នៃ</h3>
         <div class="row gy-4">
 
           <!-- Product 1 -->
           <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="card shadow border-0 rounded-3  product-card" >
+            <div class="card shadow border-0 rounded-3  product-card">
               <img src="assets/makara/image/image01.png" class="card-img-top" alt="Product" style="height: 350px;">
               <div class="card-body">
                 <i class="fa-solid fa-star text-warning"></i>
@@ -62,7 +64,7 @@
                       readonly>
                     <button class="btn btn-outline-success" onclick="changeQty(1,'qty1')">+</button>
                   </div>
-                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart ">
+                  <a href="cart.html" class="btn btn-success btn-sm fs-kp btn-addcart ">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </a>
                 </div>
@@ -90,7 +92,7 @@
                       readonly>
                     <button class="btn btn-outline-success" onclick="changeQty(1,'qty2')">+</button>
                   </div>
-                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
+                  <a href="cart.html" class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </a>
                 </div>
@@ -117,7 +119,7 @@
                       readonly>
                     <button class="btn btn-outline-success" onclick="changeQty(1,'qty3')">+</button>
                   </div>
-                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
+                  <a href="cart.html" class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </a>
                 </div>
@@ -144,7 +146,7 @@
                       readonly>
                     <button class="btn btn-outline-success" onclick="changeQty(1,'qty4')">+</button>
                   </div>
-                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
+                  <a href="cart.html" class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </a>
                 </div>
@@ -171,7 +173,7 @@
                       readonly>
                     <button class="btn btn-outline-success" onclick="changeQty(1,'qty5')">+</button>
                   </div>
-                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
+                  <a href="cart.html" class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </a>
                 </div>
@@ -186,11 +188,12 @@
     <!-- type paper -->
     <section style="margin-top: 100px;">
       <div class="container">
-        <h3 class="fw-bold fs-kp text-center display-5" style="margin-bottom: 100px;" data-aos="fade-left">ផលិតផលក្រដាសកែឆ្នៃ</h3>
+        <h3 class="fw-bold fs-kp text-center display-5" style="margin-bottom: 100px;" data-aos="fade-left">
+          ផលិតផលក្រដាសកែឆ្នៃ</h3>
         <div class="row gy-4">
           <!-- product 1 -->
           <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="card shadow border-0 rounded-3  product-card" >
+            <div class="card shadow border-0 rounded-3  product-card">
               <img src="assets/makara/image/image08.jpg" class="card-img-top" alt="Product" style="height: 350px;">
               <div class="card-body">
                 <i class="fa-solid fa-star text-warning"></i>
@@ -207,7 +210,7 @@
                       readonly>
                     <button class="btn btn-outline-success" onclick="changeQty(1,'qty6')">+</button>
                   </div>
-                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
+                  <a href="cart.html" class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </a>
                 </div>
@@ -234,7 +237,7 @@
                       readonly>
                     <button class="btn btn-outline-success" onclick="changeQty(1,'qty7')">+</button>
                   </div>
-                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
+                  <a href="cart.html" class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </a>
                 </div>
@@ -261,13 +264,66 @@
                       readonly>
                     <button class="btn btn-outline-success" onclick="changeQty(1,'qty8')">+</button>
                   </div>
-                  <a href="cart.html"  class="btn btn-success btn-sm fs-kp btn-addcart">
+                  <a href="cart.html" class="btn btn-success btn-sm fs-kp btn-addcart">
                     <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
                   </a>
                 </div>
               </div>
             </div>
           </div>
+          <!-- product 4 -->
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow border-0 rounded-3 product-card">
+              <img src="assets/makara/image/image13.png" class="card-img-top" alt="Product" style="height: 350px;">
+              <div class="card-body">
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star-half-stroke text-warning"></i>
+                <h1 class="card-title mt-2 fs-kp" style="font-size: 22px;"><span>ឈ្មោះ​ ៖</span>​ពែងកាហ្វេក្រដាស</h1>
+                <p class="card-text fs-kp">តម្លៃ៖​ <span>$0.50</span></p>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <button class="btn btn-outline-success" onclick="changeQty(-1,'qty9')">-</button>
+                    <input type="text" id="qty9" value="1" class="form-control text-center mx-2" style="width:60px;"
+                      readonly>
+                    <button class="btn btn-outline-success" onclick="changeQty(1,'qty9')">+</button>
+                  </div>
+                  <a href="cart.html" class="btn btn-success btn-sm fs-kp btn-addcart">
+                    <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- product 5 -->
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="card shadow border-0 rounded-3 product-card">
+              <img src="assets/makara/image/image14.png" class="card-img-top" alt="Product" style="height: 350px;">
+              <div class="card-body">
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star text-warning"></i>
+                <i class="fa-solid fa-star-half-stroke text-warning"></i>
+                <h1 class="card-title mt-2 fs-kp" style="font-size: 22px;"><span>ឈ្មោះ​ ៖</span>កែវការ៉េមក្រដាស</h1>
+                <p class="card-text fs-kp">តម្លៃ៖​ <span>$0.50</span></p>
+                <div class="d-flex align-items-center justify-content-between">
+                  <div class="d-flex align-items-center">
+                    <button class="btn btn-outline-success" onclick="changeQty(-1,'qty9')">-</button>
+                    <input type="text" id="qty9" value="1" class="form-control text-center mx-2" style="width:60px;"
+                      readonly>
+                    <button class="btn btn-outline-success" onclick="changeQty(1,'qty9')">+</button>
+                  </div>
+                  <a href="cart.html" class="btn btn-success btn-sm fs-kp btn-addcart">
+                    <i class="fa-solid fa-cart-shopping fa-beat"></i> ដាក់ចូលកន្ត្រក
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
