--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                     </div>
                     <!-- 3 col  -->
                     <div class="row justify-content-center mb-4">
-
+                        <h1 class="text-center my-4">សមាជិកក្រុម</h1>
                         <!-- nazaby  -->
                         <div class="col-lg-3">
                             <div class="card card-member">
@@ -168,7 +168,7 @@
                                             <li><a class="nav-link" href="https://t.me/chummakara168"><img
                                                         src="assets/chhorng/img/telegram-black.png" class="img-icon"
                                                         alt=""></a></li>
-                                            <li><a class="nav-link" href="#"><img src="assets/chhorng/img/linkin.png"
+                                            <li><a class="nav-link" href="https://www.linkedin.com/in/chum-makara-8b0718382/"><img src="assets/chhorng/img/linkin.png"
                                                         class="img-icon" alt=""></a></li>
                                         </ul>
                                     </div>
