--- a/event5.html
+++ b/event5.html
@@ -141,7 +141,7 @@
         </div>
 
         <!-- Pagination -->
-        <div class="swiper-pagination"></div>
+        <!-- <div class="swiper-pagination"></div> -->
 
         <!-- Navigation -->
         <div class="swiper-button-prev"></div>
