--- a/event3.html
+++ b/event3.html
@@ -154,7 +154,7 @@
         </div>
 
         <!-- Pagination -->
-        <div class="swiper-pagination"></div>
+        <!-- <div class="swiper-pagination"></div> -->
 
         <!-- Navigation -->
         <div class="swiper-button-prev"></div>
