--- a/event6.html
+++ b/event6.html
@@ -152,7 +152,7 @@
         </div>
 
         <!-- Pagination -->
-        <div class="swiper-pagination"></div>
+        <!-- <div class="swiper-pagination"></div> -->
 
         <!-- Navigation -->
         <div class="swiper-button-prev"></div>
