--- a/cart.html
+++ b/cart.html
@@ -87,7 +87,7 @@
             </table>
           </div>
           <div class="text-end mt-3">
-            <a href="buy.html" class="btn btn-success fs-kp">ការបញ្ជាទិញ</a>
+            <a href="payment.html" class="btn btn-success fs-kp">ការបញ្ជាទិញ</a>
           </div>
         </div>
       </div>
