--- a/payment.html
+++ b/payment.html
@@ -4,169 +4,151 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
+  <title>Payment Checkout</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/makara/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 </head>
 <style>
   body {
-    background-color: #f8f9fa;
-  }
-
-  .order-summary {
-    border: 1px solid #dee2e6;
-    border-radius: 8px;
-    padding: 20px;
-    background-color: #fff;
-  }
-
-  .purchase-btn {
-    width: 100%;
-    border: 2px solid #007bff;
-    background: none;
-    color: #007bff;
-    font-weight: bold;
-  }
-
-  .purchase-btn:hover {
-    background-color: #007bff;
-    color: #fff;
+    color: #334155;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    padding: 20px 0;
   }
 </style>
 
-<body>
+<body class="fs-kp">
+  <div class="container payment-container">
+    <div class="row justify-content-center">
+      <div class="col-lg-10">
+        <div class="payment-card">
+          <div class="row g-0">
+            <!-- Payment Summary -->
+            <div class="col-md-5 payment-summary">
+              <h5 class="fs-kp"><i class="fas fa-receipt me-2"></i>សង្ខេបការទូទាត់</h5>
 
-  <main>
-    <section>
-      <div class="container py-5">
-        <div class="row g-4">
-
-          <!-- Payment Form -->
-          <div class="col-lg-8">
-            <div class="card p-4 shadow-sm">
-              <h5 class="mb-3">SELECT PAYMENT METHOD</h5>
-
-              <!-- Nav Tabs -->
-              <ul class="nav nav-tabs mb-3" id="paymentTab" role="tablist">
-                <li class="nav-item" role="presentation">
-                  <button class="nav-link active" id="credit-tab" data-bs-toggle="tab" data-bs-target="#credit"
-                    type="button" role="tab">
-                    Credit Card
-                  </button>
-                </li>
-                <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="bank-tab" data-bs-toggle="tab" data-bs-target="#bank" type="button"
-                    role="tab">
-                    Bank Transfer
-                  </button>
-                </li>
-
-              </ul>
-
-              <!-- Tab Content -->
-              <div class="tab-content" id="paymentTabContent">
-
-                <!-- Credit Card -->
-                <div class="tab-pane fade show active" id="credit" role="tabpanel">
-                  <form>
-                    <div class="mb-3">
-                      <label class="form-label">Name on Card</label>
-                      <input type="text" class="form-control" placeholder="Enter name">
-                    </div>
-                    <div class="mb-3">
-                      <label class="form-label">Card Number</label>
-                      <input type="text" class="form-control" placeholder="0000 - 0000 - 0000 - 0000">
-                    </div>
-                    <div class="row g-3">
-                      <div class="col-md-4">
-                        <label class="form-label">Month</label>
-                        <select class="form-select">
-                          <option>Select Month</option>
-                          <option>01</option>
-                          <option>02</option>
-                          <option>03</option>
-                          <option>04</option>
-                          <option>05</option>
-                          <option>06</option>
-                          <option>07</option>
-                          <option>08</option>
-                          <option>09</option>
-                          <option>10</option>
-                          <option>11</option>
-                          <option>12</option>
-                        </select>
-                      </div>
-                      <div class="col-md-4">
-                        <label class="form-label">Year</label>
-                        <select class="form-select">
-                          <option>Select Year</option>
-                          <option>2025</option>
-                          <option>2026</option>
-                          <option>2027</option>
-                          <option>2028</option>
-                        </select>
-                      </div>
-                      <div class="col-md-4">
-                        <label class="form-label">CVV</label>
-                        <input type="text" class="form-control" placeholder="•••">
-                      </div>
-                    </div>
-                  </form>
+              <div class="summary-item">
+                <div class="item-info">
+                  <p>ធុងទឹកប្លាស្ទិច</p>
+                  <small><i class="far fa-clock me-1"></i>2025 Aug 10 at 10:30 PM</small>
                 </div>
-
-                <!-- Bank Transfer -->
-                <div class="tab-pane fade" id="bank" role="tabpanel">
-                  <form>
-                    <div class="mb-3">
-                      <label class="form-label">Account Holder Name</label>
-                      <input type="text" class="form-control" placeholder="Enter name">
-                    </div>
-                    <div class="mb-3">
-                      <label class="form-label">Account Number</label>
-                      <input type="text" class="form-control" placeholder="Enter account number">
-                    </div>
-                    <div class="mb-3">
-                      <label class="form-label">Bank Name</label>
-                      <input type="text" class="form-control" placeholder="Enter bank name">
-                    </div>
-                  </form>
+                <div class="item-price">
+                  <span>$14.00</span>
                 </div>
+              </div>
+
+              <div class="summary-item">
+                <div class="item-info">
+                  <p>កៅស៊ូប្លាស្ទិចថ្លា</p>
+                  <small><i class="far fa-clock me-1"></i>2025 Aug 10 at 10:30 PM</small>
+                </div>
+                <div class="item-price">
+                  <span>$75.00</span>
+                </div>
+              </div>
+
+              <div class="summary-item">
+                <div class="item-info">
+                  <p>សៀវភៅ</p>
+                  <small><i class="far fa-clock me-1"></i>2025 Aug 10 at 10:30 PM</small>
+                </div>
+                <div class="item-price">
+                  <span>$65.00</span>
+                </div>
+              </div>
+
+              <div class="summary-item">
+                <div class="item-info">
+                  <p>ថូផ្កា</p>
+                  <small><i class="far fa-clock me-1"></i>2025 Aug 10 at 10:30 PM</small>
+                </div>
+                <div class="item-price">
+                  <span>$50.00</span>
+                </div>
+              </div>
+
+              <div class="total-price">
+                <p class="mb-1">
+                  ចំនួនសរុប</p>
+                <h4>$199.00</h4>
               </div>
             </div>
-          </div>
 
-          <!-- Order Summary -->
-          <div class="col-lg-4">
-            <div class="order-summary shadow-sm">
-              <h6 class="fw-bold">ORDER SUMMARY</h6>
-              <div class="d-flex justify-content-between">
-                <p class="mb-1">Samsung Galaxy S8</p>
-                <p class="mb-1 text-primary fw-bold">$685</p>
+            <!-- Payment Method -->
+            <div class="col-md-7 payment-method">
+              <h5><i class="fas fa-credit-card me-2"></i>វិធីសាស្រ្តទូទាត់ប្រាក់</h5>
+
+              <div class="row g-4">
+                <!-- ABA Pay -->
+                <div class="col-sm-6 col-md-6">
+                  <div class="payment-option" data-bs-toggle="modal" data-bs-target="#qrModalaba">
+                    <img src="assets/makara/image/aba02.png" alt="ABA Bank">
+                    <p>ABA Pay</p>
+                  </div>
+                </div>
+
+                <!-- ACLEDA -->
+                <div class="col-sm-6 col-md-6">
+                  <div class="payment-option" data-bs-toggle="modal" data-bs-target="#qrModalac">
+                    <img src="assets/makara/image/ac02.png" alt="ACLEDA Bank" style="height: 30px; width: auto;">
+                    <p>ACLEDA Bank</p>
+                  </div>
+                </div>
               </div>
-              <p class="text-muted small">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              <ul class="list-unstyled small">
-                <li>✔ 128GB Storage</li>
-                <li>✔ 5.7” screen</li>
-                <li>✔ 6GB Ram</li>
-                <li>✔ 4K display</li>
-                <li>✔ Silver</li>
-              </ul>
-              <div class="border-top pt-3">
-                <p class="mb-1 fw-bold">WEDNESDAY</p>
-                <p class="small text-muted">January 18, 2017 | 11:00 AM</p>
-              </div>
-              <button class="btn purchase-btn mt-3">PURCHASE NOW</button>
+              <button class="btn btn-purchase">
+                <i class="fas fa-shopping-bag me-2"></i>ទិញទំនិញ
+              </button>
             </div>
           </div>
         </div>
       </div>
-    </section>
-  </main>
+    </div>
+  </div>
 
+  <!-- ABA Modal -->
+  <div class="modal fade" id="qrModalaba" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"><i class="fas fa-qrcode me-2"></i>ABA QR Payment</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center py-4">
+          <img src="https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=ABAPayment12345" alt="ABA QR Code"
+            class="img-fluid rounded" style="max-width: 280px;">
+          <p class="mt-4">សូមស្កែន QR Code ដើម្បីបង់ប្រាក់តាមរយៈ ABA Bank</p>
+        </div>
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ACLEDA Modal -->
+  <div class="modal fade" id="qrModalac" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"><i class="fas fa-qrcode me-2"></i>ACLEDA QR Payment</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center py-4">
+          <img src="https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=ACLEDAPayment12345"
+            alt="ACLEDA QR Code" class="img-fluid rounded" style="max-width: 280px;">
+          <p class="mt-4">សូមស្កែន QR Code ដើម្បីបង់ប្រាក់តាមរយៈ ACLEDA Bank</p>
+        </div>
+        <div class="modal-footer justify-content-center">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
